package name correction

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "enfcopy",
+  "name": "enfscopy",
   "version": "0.0.2",
   "description": "Copy files, directories and links in node cp -R",
   "license": "CC-BY-4.0",
