--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "appveyor": "node ./node_modules/mocha/bin/mocha --reporter spec --require should test/*.js"
   },
   "dependencies": {
-    "enfspatch": "^0.0.3",
-    "enfsmkdirp": "0.0.1",
-    "enfsfind": "0.0.1"
+    "enfspatch": "0.0",
+    "enfsmkdirp": "0.0",
+    "enfsfind": "0.0"
   },
   "devDependencies": {
-    "eslint": "2.1.0",
+    "eslint": "2.2.0",
     "eslint-plugin-mocha": "2.0.0",
     "mocha": "2.4.5",
     "should": "8.2.2",
