--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "eslint-plugin-mocha": "^4.9.0",
     "mocha": "^3.2.0",
     "should": "^11.2.1",
-    "rimraf": "^2.6.1"
+    "rimraf": "^2.6.1",
+    "semver":"^5.3.0"
   },
   "keywords": [
     "copy",
